# novo-projeto-contas-pagar

./: .gitignore  app.py  main.py  pyproject.toml  requirements.txt  requirements_windows.txt  star.bat  teste.py
