[project]
name = "cts-portal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "babel>=2.17.0",
    "pandas>=2.3.3",
    "pyodbc>=5.3.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "sqlalchemy-access>=2.0.3",
    "streamlit>=1.51.0",
    "streamlit-aggrid>=1.2.0.post1",
    "xlsxwriter>=3.2.9",
]
